<resources>
    <string name="app_name">MyApplicationFragments</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_subrayadoLogin"><u>Having trouble loggin in?</u></string>
    <string name="text_subrayadoRegister"><u>Login here</u></string>
    <string name="title_activity_menu_fragment">MenuFragment</string>
    <string name="or">or</string>
    <string name="login_with_facebook">login with facebook</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="skip">skip</string>
    <string name="crear_cuenta">Create account</string>
    <string name="a_n_no_tienes_cuenta">You don\'t have account?</string>
    <string name="email">Email</string>
    <string name="find_your_account">Find your Account</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="please_check_your_email_for_a_message_with_your_code_your_code_is_6_numbers_long">Please check your email for a message with your code. Your code is 6 numbers long.</string>
    <string name="enter_the_security_code">Enter the security code</string>
    <string name="code">Code</string>
    <string name="correo_gmail_com">correo@gmail.com</string>
    <string name="are_not_you"><u>Are not you?</u></string>
    <string name="continuar">Continue</string>
    <string name="choose_a_new_password">Choose a new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="create_a_new_password_that_is_at_least_6_characters_long">Create a new password that is at least 6 characters long.</string>
    <string name="close">Close</string>
    <string name="thank_you_for_reviewing_this_information_you_can_access_the_account_settings_at_any_time_to_review_the_decisions_you_have_made_regarding_your_data_and_manage_settings">Thank you for reviewing this information. You can access the account settings at any time to review the decisions you have made regarding your data and manage the settings.</string>
    <string name="you_are_done">You are done!</string>
    <string name="username">Username</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="categories">Categories</string>
    <string name="favourites">Favourites</string>
    <string name="ayuda">Help</string>
    <string name="acerca_de">About us</string>
    <string name="historial">History</string>
    <string name="bloqueados">Blocked</string>
    <string name="notificaciones">Notifications</string>
    <string name="we_have_sent_your_code_to">We have sent your code to:</string>
    <string name="please_enter_your_email_or_phone_number_to_search_for_your_account">Please enter your email or phone number to search for your account</string>
    <string name="menu">Menu</string>
    <string name="news">News</string>
    <string name="message">Message</string>
    <string name="block_font">Block font</string>
    <string name="web">Web</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="deja_un_comentario">Leave a comment</string>
    <string name="comentario">comment</string>
    <string name="publicar_comentario">Post comment</string>
    <string name="you_haven_t_no_friends_do_you_want_to_add">You haven\'t no friends, do you want to add ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_us_newstoday">About us NewsToday</string>
    <string name="leer_m_s_tarde">Read later</string>



    <!--    Lorem ipsums -->
    <string name="lorem_ipsum_corto">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan molestie risus non facilisis.
    </string>
    <string name="lorem_ipsum_corto_x3">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan molestie risus non facilisis.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan molestie risus non facilisis.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan molestie risus non facilisis.
    </string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam accumsan molestie risus non facilisis.
        Cras rhoncus elementum massa, ac luctus lacus aliquam vel. Quisque eget eros vel justo laoreet molestie vitae quis dolor.
        Vivamus vitae orci dui. Suspendisse potenti. Vivamus feugiat pellentesque elementum. Mauris interdum nisi at odio vestibulum semper.
        Ut eu accumsan magna. Integer mollis tincidunt velit, et rutrum diam laoreet non. In quis eleifend felis.
        Mauris sollicitudin nibh quis vulputate fringilla. Praesent et velit ut libero iaculis feugiat et non dolor. Proin vitae dapibus leo, vitae interdum nisl.
        Nunc in ipsum nec magna mollis egestas. Vivamus id quam nec nibh interdum rutrum.

        Donec sem tellus, varius quis enim sit amet, pellentesque feugiat tortor. Nam et convallis orci, sed ornare neque. Nullam at sagittis neque.
        Maecenas tempus nisi sit amet diam ornare cursus. Nunc viverra nibh quis est convallis malesuada. Nunc porttitor eleifend arcu a commodo.
        Sed magna augue, luctus eu luctus eu, cursus vel magna. Praesent nec est tellus. Nullam maximus arcu et laoreet dapibus. Quisque laoreet malesuada facilisis.
        Cras sapien dolor, malesuada nec nulla vitae, pretium dictum lorem. Vestibulum neque velit, facilisis vel metus id, aliquam vulputate ipsum.
    </string>

    <string name="noticia_3">News 3</string>
    <string name="noticia_2">News 2</string>
    <string name="noticia_1">News 1</string>
</resources>
