<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/blockFragment"
        android:icon="@drawable/ic_sin_telefono_1"
        android:title="@string/block_font"
        android:enabled="false"/>

    <item
        android:id="@+id/webFragment"
        android:icon="@drawable/ic_web_1"
        android:title="@string/web"
        android:enabled="false"/>

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_periodico"
        android:title="@string/home" />
    <item
        android:id="@+id/favouriteFragment"
        android:icon="@drawable/ic_saved_icon"
        android:title="@string/favourite"
        android:enabled="false"/>
    <item
        android:id="@+id/compartirFragment"
        android:icon="@drawable/ic_participacion_1"
        android:title="@string/share"
        android:enabled="false"/>
</menu>
