<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryOneFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btn_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/business"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_entertainment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entertainment"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/health"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_science"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/science"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/btn_technology"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/technology"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"/>
</LinearLayout>