<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPasswordFragment3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_new_password"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="25dp"
            android:paddingTop="100dp"
            android:textSize="26sp"
            android:fontFamily="@font/poppins_bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_password_that_is_at_least_6_characters_long"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins_bold"/>

        <EditText
            android:id="@+id/EditextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/input"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/EditextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/input"
            android:fontFamily="@font/poppins_bold"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:weightSum="2">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/cancel"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:background="@drawable/btn_redondeado_rojo"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/continuar"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:background="@drawable/btn_redondeado_verde"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>