<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo"
        android:gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextCorreo"
            android:hint="@string/email"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextPassword"
            android:hint="@string/password"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:inputType="textPassword"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtForgetPassword"
            android:text="@string/text_subrayadoLogin"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/btnLogin"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_n_no_tienes_cuenta"
                android:fontFamily="@font/poppins_bold"
                android:textSize="10sp"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnCreateAccount"
                android:text="@string/crear_cuenta"
                android:fontFamily="@font/poppins_bold"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>