<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo"
        android:gravity="center"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextUsername"
            android:hint="@string/username"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextCorreo"
            android:hint="@string/email"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextCorreoConfirm"
            android:hint="@string/confirm_email"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextPassword"
            android:hint="@string/password"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditextPasswordConfirm"
            android:hint="@string/confirm_password"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginHere"
            android:text="@string/text_subrayadoRegister"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:layout_gravity="end"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/register"
            android:fontFamily="@font/poppins_bold"
            android:id="@+id/btnRegisterAndLogin"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:elevation="5dp"/>


    </LinearLayout>

</FrameLayout>