<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment"
    android:background="@color/fondo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/general"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/notificaciones"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/bloqueados"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/historial"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/ayuda"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:textSize="24sp"
                    android:text="@string/acerca_de"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="start"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/btn_redondeado_fit_gris"/>
            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>