<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo"
        android:gravity="center"
        android:layout_height="match_parent">



        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutHome"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:tabIndicator="@drawable/background_tab_indicator_dot_blue"
            app:tabBackground="@drawable/background_amber_dot_3dp"
            app:tabIndicatorColor="@android:color/holo_red_dark"
            app:tabIndicatorGravity="center"

            app:tabMaxWidth="50dp"
            app:tabGravity="center"
 />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/login_with_facebook"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_facebook"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:textSize="18sp"
            android:id="@+id/btnFacebook"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/login"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:textSize="20sp"
            android:id="@+id/btnLogin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/register"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_rojo"
            android:textColor="@color/white"
            android:elevation="5dp"
            android:textSize="20sp"
            android:id="@+id/btnRegister"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/or"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/gris_fuerte"
            android:textSize="25sp"
            android:id="@+id/txtOr"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:text="Skip"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_gris"
            android:textColor="@color/gris_negro"
            android:elevation="5dp"
            android:textSize="20sp"
            android:id="@+id/btnSkip"/>
    </LinearLayout>
</FrameLayout>