<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPasswordFragment4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_done"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_bold"/>

        <ImageView
            android:layout_width="280dp"
            android:layout_height="224dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/image_7" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_for_reviewing_this_information_you_can_access_the_account_settings_at_any_time_to_review_the_decisions_you_have_made_regarding_your_data_and_manage_settings"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_gravity="start"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_bold"/>
        </ScrollView>
        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/btnClose"
            android:text="@string/close"
            android:layout_marginBottom="20dp"
            android:textColor="@color/gris_negro"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/btn_redondeado_gris"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>